# Simulator

./: .gitmodules  CMakeLists.txt  qml.qrc
Gui/: CMakeLists.txt  FlightManager.qml  Gui.qmlproject  Gui.qmlproject.qtds  MainWindow.qml  SimulationItem.qml  SimulatorInterface.cpp  SimulatorInterface.hpp  SimulatorItem.qml  main.cpp  main.qml
Gui/asset_imports/Quick3DAssets/Aileron/: qmldir
Gui/asset_imports/Quick3DAssets/Aileron/_icons/: Aileron_libicon
Gui/asset_imports/Quick3DAssets/Aileron_v1/: Aileron_v1.qml  qmldir
Gui/asset_imports/Quick3DAssets/Aileron_v1/_icons/: Aileron_v1_libicon@2x
Gui/asset_imports/Quick3DAssets/Wing/: Wing.qml  qmldir
Gui/asset_imports/Quick3DAssets/Wing/meshes/: body1.mesh
Gui/asset_imports/Quick3DAssets/Wing_v1/: Wing_v1.qml  qmldir
Gui/asset_imports/Quick3DAssets/Wing_v1/_icons/: Wing_v1_libicon@2x
Gui/imports/Gui/designer/: plugin.metainfo
Simulator/: CMakeLists.txt
Simulator/Src/: PlaneItem.hpp  PlaneStatus.cpp  PlaneStatus.hpp
Simulator/Src/Math/: CMakeLists.txt
Simulator/Src/Math/Src/: Matrix.cpp  Matrix.hpp
Simulator/Src/PlaneItems/: PlaneAileron.hpp  PlaneAirfoil.cpp  PlaneEngine.cpp
Simulator/Uts/: PlaneEngineTest.cpp
Src/: PlaneItem.cpp  PlaneStatus.hpp  Simulator.cpp  Simulator.hpp  main.cpp
Src/PlaneItems/: PlaneAileron.cpp  PlaneAirfoil.cpp  PlaneAirfoil.hpp  PlaneEngine.hpp
Uts/: PlaneAirfoilTest.cpp  PlaneItemMock.hpp  SimulatorTest.cpp
asset_imports/Quick3DAssets/Aileron/: Aileron.qml
asset_imports/Quick3DAssets/Aileron/meshes/: body1.mesh
asset_imports/Quick3DAssets/Wing/_icons/: Wing_libicon
